Revert ":bug: fix double border bug"
This reverts commit b93df554a44505c37a9df89633bf743122d85a28.

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -35,15 +35,13 @@ body {
   text-align: left;
 }
 
-.reveal .slides section {
+.reveal .slides section,
+.reveal .slides section section {
+  box-shadow: 0 0 5px 1px #cccccc;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   padding: 0 var(--main-content-horizontal-padding);
-}
-
-.reveal .slides > section {
-  box-shadow: 0 0 5px 1px #cccccc;
 }
 
 .reveal .slides section section {
